--- a/projektgrupowy/templates/info.html
+++ b/projektgrupowy/templates/info.html
@@ -1,8 +1,28 @@
 {% extends 'base.html' %}
 
-{% block title %}Strona główna{% endblock %}
+{% block title %}Projekt Grupowy - Opis{% endblock %}
 
 {% block content %}
-
-
+<div class="container">
+    <div class="row">
+        <div class="col-md-8 offset-md-2">
+            <div class="jumbotron mt-4">
+                <h1 class="display-4">Projekt Grupowy na Studiach</h1>
+                <p class="lead">Opis naszego projektu grupowego</p>
+                <hr class="my-4">
+                <p>Projekt grupowy na studiach jest jednym z kluczowych elementów programu nauczania. To okazja dla studentów do pracy zespołowej, rozwoju umiejętności komunikacyjnych i zdobycia praktycznego doświadczenia w dziedzinie swojej specjalizacji.</p>
+                <p>Każdy projekt grupowy zazwyczaj obejmuje następujące etapy:</p>
+                <ol>
+                    <li>Określenie tematu i celów projektu.</li>
+                    <li>Podział zadań w zespole.</li>
+                    <li>Zbieranie i analiza danych lub informacji.</li>
+                    <li>Praca nad rozwiązaniem lub implementacją projektu.</li>
+                    <li>Prezentacja wyników lub raportu końcowego.</li>
+                </ol>
+                <p>W trakcie realizacji projektu grupowego studenci mogą również rozwijać umiejętności związane z planowaniem, organizacją, negocjacjami oraz zarządzaniem czasem i zasobami.</p>
+                <p>Projekty grupowe są często postrzegane jako ważne narzędzie dydaktyczne, które przygotowuje studentów do pracy w dynamicznym środowisku biznesowym oraz uczy ich efektywnego współdziałania w zespołach.</p>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
