--- a/projektgrupowy/templates/base.html
+++ b/projektgrupowy/templates/base.html
@@ -87,10 +87,10 @@
     </header>
 
     <nav>
-        <a href="/info">O projekcie</a>
-        <a href="/klasyfikator">Klasyfikator</a>
-        <a href="#depresja-poporodowa">Depresja poporodowa</a>
-        <a href="#statystyki">Statystyki</a>
+         <a href="{% url 'info' %}">O projekcie</a>
+        <a href="{% url 'klasyfikator' %}">Klasyfikator</a>
+        <a href="{% url 'o-depresji' %}">Depresja poporodowa</a>
+        <a href="{% url 'statystyki' %}">Statystyki</a>
     </nav>
   <main>
         <!-- Główna zawartość strony, będzie nadpisana przez blok z konkretnego widoku -->
