depresja html fix

--- a/projektgrupowy/templates/depresja.html
+++ b/projektgrupowy/templates/depresja.html
@@ -3,17 +3,14 @@
 {% block title %}Depresja Poporodowa - Opis{% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container" style="background: linear-gradient(to bottom, #333, #666); padding: 20px; border-radius: 10px;">
     <div class="row">
         <div class="col-md-8 offset-md-2">
-            <div class="jumbotron mt-4">
-                <h1 class="display-4">Depresja Poporodowa</h1>
-                <p class="lead">Opis zaburzenia psychicznego</p>
+            <div class="jumbotron mt-4" style="background-color: #444; color: white; padding: 30px; border-radius: 10px;">
+                <h1 class="display-4 text-center">Depresja Poporodowa</h1>
                 <hr class="my-4">
-                <p>Depresja poporodowa, nazywana również baby blues, to zaburzenie psychiczne występujące u niektórych kobiet po porodzie. Objawy mogą obejmować uczucie smutku, lęku, zmęczenia, trudności ze snem oraz problemów z koncentracją.</p>
-                <p>Depresja poporodowa może mieć negatywny wpływ na zdrowie psychiczne i emocjonalne matki oraz na jej relacje z rodziną i dzieckiem. Dlatego ważne jest, aby kobiety otrzymywały wsparcie i pomoc w radzeniu sobie z tym trudnym okresem.</p>
-                <p>Podstawowe metody leczenia depresji poporodowej mogą obejmować terapię psychoedukacyjną, terapię poznawczo-behawioralną oraz farmakoterapię w przypadku cięższych objawów. Istotne jest również wsparcie rodziny i bliskich oraz regularne kontrole lekarskie.</p>
-                <p>W przypadku podejrzenia depresji poporodowej ważne jest skonsultowanie się z lekarzem lub specjalistą ds. zdrowia psychicznego w celu uzyskania odpowiedniej diagnozy i leczenia.</p>
+                <p style="text-align: justify;">Depresja poporodowa - to zaburzenie psychiczne występujące u niektórych kobiet po porodzie. Objawy mogą obejmować uczucie smutku, lęku, zmęczenia, trudności ze snem oraz problemów z koncentracją.Depresja poporodowa może mieć negatywny wpływ na zdrowie psychiczne i emocjonalne matki oraz na jej relacje z rodziną i dzieckiem. Podstawowe metody leczenia depresji poporodowej mogą obejmować terapię psychoedukacyjną, terapię poznawczo-behawioralną oraz farmakoterapię w przypadku cięższych objawów. Istotne jest również wsparcie rodziny i bliskich oraz regularne kontrole lekarskie. W przypadku podejrzenia depresji poporodowej ważne jest skonsultowanie się z lekarzem lub specjalistą ds. zdrowia psychicznego w celu uzyskania odpowiedniej diagnozy i leczenia. </p>
+                <p> Pomocy można szukać na zaufanych stronach takich jak: https://depresjapoporodowa.pl/gdzie-po-pomoc , tam znajdziemy wszystkie ważne informacje na temat kontaktu oraz pomocy związanej z depresją poporodową. </p>
             </div>
         </div>
     </div>
